call number mouseover and mouseleave

--- a/branchManager/dishesList_detail.html
+++ b/branchManager/dishesList_detail.html
@@ -37,7 +37,7 @@
         <div class="layui-form-mid"><span id="dishesName_title">法式大蜗牛</span></div>
       </div>
       <div class="dishes_box">
-        <div class="layui-row">
+        <div class="layui-form-item">
           <div class="layui-col-md6 layui-col-sm6 layui-col-xs6">
             <label class="layui-form-label">菜品名称</label>
             <div class="layui-input-block">
