--- a/cashier/callNum.html
+++ b/cashier/callNum.html
@@ -27,10 +27,21 @@
 	</head>
 	<body>
 <div class="content_body">
-	<span class="layui-breadcrumb nav_loc" style="display: block;background: #f2f2f2;height: 35px;line-height: 35px">
-		<span>当前位置：</span>
+	<span class="layui-breadcrumb nav_loc" id="cc" onmouseenter="abc()" onmouseleave="cba()">
+		<span>当前位置：</span><span id="aa"></span><input type="hidden" value="123" id="bb">
 	  	<a><cite>叫号</cite></a>
 	</span>
+	<script>
+		function abc() {
+			$('#aa').css("display","inline-block");
+			var bb = document.getElementById('bb').value;
+			console.log(bb);
+			document.getElementById('aa').innerText = bb;
+		}
+		function cba() {
+			$('#aa').css("display","none");
+		}
+	</script>
 	<!-- 内容开始 -->
 	<div class="store_box" style="margin: 10px;text-align: center;" >
 		<form class="layui-form" style="margin-top: 10px">
